--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ src/application_train.csv
 src/application.csv
 *project/
 *target/
+*output/
+*.bsp/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
